--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,23 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+	<main>
+    <div class="section centered">
+      <div class="section-one">
+        <div class="green-box">
+        </div>
+        <div class="blue-box">
+        </div>
+      </div>
+      <div class="section-two">
+        <div class="grey-box">
+        </div>
+        <div class="black-box">
+        </div>
+        <div class="orange-box">
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
