--- a/position-exercise.html
+++ b/position-exercise.html
@@ -19,7 +19,7 @@
 <body>
   <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
   <nav>
-    <img src="images/icon.png">
+    <img src="images/icon.png" class="circular">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="display-exercise.html">display</a></li>
@@ -27,8 +27,13 @@
     </ul>
   </nav>
 
-  <main>
-    <!-- Put the HTML you need to accomplish the design -->
+  <main class="entire">
+    <div class="image-section">
+      <div class="image-box">
+        <img src="images/spacecat.png" class="cat"/>
+        <img src="images/spacedog.png" class="dog"/>
+      </div>
+    </div>
   </main>
 </body>
 </html>
